# neurobalance

./: .gitignore  Copy_of_NEUROBALANCE_Full_Training_Colab.ipynb  NEUROBALANCE_Full_Training_Colab.ipynb  NEUROBALANCE_Full_Training_Colab1.ipynb  README.md  pyproject.toml  requirements.txt
configs/: llava_next_base.yaml  neurobalance_full.yaml  neurobalance_partial.yaml
configs/ablations/: gating_only.yaml
configs/ablations/configs/ablations/: injection_only.yaml
neurobalance/: __init__.py
neurobalance/data/: collators.py  vqa_datasets.py
neurobalance/metrics/: anls.py  bleu_rouge_optional.py  vqa_accuracy.py
neurobalance/models/: instructblip_wrapper.py  llava_next_wrapper.py  neurobalance_model.py  toy_model.py
neurobalance/modules/: __init__.py  adaptive_attention.py  dape_entropy.py  knowledge_injection.py  logit_lens.py  sparse_gating.py
neurobalance/utils/: config.py  logging.py  seed.py
scripts/: evaluate.py  preprocess_lingoqa.py  preprocess_pathvqa.py  preprocess_pmc_vqa.py  profile_flops_latency.py  statistical_validation.py  train.py
scripts/interpretability/: attention_entropy.py  attention_heatmaps.py  dape_neuron_mining.py  logit_lens.py  neuron_retention.py
tests/: test_attention_scaling.py  test_gating.py  test_injection.py
